--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,102 @@
-<!doctype html><html lang='en'><head><meta charset='utf-8'><meta name='viewport' content='width=device-width, initial-scale=1'><title>Srinidhii Sreeram</title><meta name='description' content='Bharatanatyam artist and teacher based in London. Performances, classes, and workshops.'><script src='https://cdn.tailwindcss.com'></script><style>:root{--bg:#F6ECE5;--copper:#C4682D;--copper-d:#9F4F1E;--text:#2B2B2B;}body{background:var(--bg);color:var(--text);}.nav-link{color:var(--copper);font-weight:600;}.nav-link.active{text-decoration:underline;text-underline-offset:6px;}.btn{background:var(--copper);color:#fff;padding:.6rem 1.2rem;border-radius:.6rem;}.btn:hover{background:var(--copper-d);}.card{background:#fff;border-radius:1rem;box-shadow:0 10px 20px rgba(0,0,0,.05);}</style></head><body class='antialiased'><header class='sticky top-0 z-30 bg-[var(--bg)]/95 backdrop-blur border-b'><div class='max-w-6xl mx-auto px-6 py-4 flex items-center gap-10'><a href='index.html' class='nav-link '>Home</a><a href='about.html' class='nav-link '>About</a><a href='gallery.html' class='nav-link '>Gallery</a><a href='contact.html' class='nav-link active'>Contact</a></div></header><main class='max-w-6xl mx-auto px-6 py-10'><div class='grid md:grid-cols-2 gap-8 items-start'><div><img src='contact-image.png' class='w-full rounded-lg' alt='Contact image'></div><div><div class='card p-8'><h1 class='text-4xl font-extrabold mb-4'>Contact me</h1><div class='h-1 w-16 bg-[var(--copper)] mb-6'></div><p class='mb-4'><strong>Email:</strong> srinidhiisreeram@gmail.com</p><form action='mailto:srinidhiisreeram@gmail.com' method='post' enctype='text/plain' class='grid grid-cols-1 md:grid-cols-2 gap-4'><input name='name' placeholder='Name' class='border rounded p-3' required><input type='email' name='email' placeholder='Email' class='border rounded p-3' required><input name='phone' placeholder='Phone Number including country code' class='border rounded p-3 md:col-span-2'><textarea name='message' rows='5' placeholder='Message' class='border rounded p-3 md:col-span-2'></textarea><button class='btn md:w-max'>Submit</button></form></div></div></div></main><footer class='mt-16 border-t'><div class='max-w-6xl mx-auto px-6 py-10 text-sm text-gray-600'>© Srinidhii Sreeram</div></footer></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Contact — Srinidhii Sreeram</title>
+  <meta name="description" content="Contact Srinidhii Sreeram for Bharatanatyam classes, performances and workshops.">
+  <link rel='canonical' href='https://srinidhii-site.vercel.app/contact.html'>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    :root { --bg:#F6ECE5; --copper:#C4682D; --copper-d:#9F4F1E; --text:#2B2B2B; }
+    body { background:var(--bg); color:var(--text); }
+    .nav-link { color:var(--copper); font-weight:600; }
+    .nav-link.active { text-decoration:underline; text-underline-offset:6px; }
+    .btn { background:var(--copper); color:#fff; padding:.6rem 1.2rem; border-radius:.6rem; }
+    .btn:hover { background:var(--copper-d); }
+    .card { background:#fff; border-radius:1rem; box-shadow:0 10px 20px rgba(0,0,0,.06); }
+  </style>
+</head>
+<body class="antialiased">
+<header class="sticky top-0 z-30 bg-[var(--bg)]/95 backdrop-blur border-b">
+  <div class="max-w-6xl mx-auto px-6 py-4 flex items-center justify-between gap-10">
+    <nav class="flex items-center gap-10">
+      <a href="/" class="nav-link">Home</a>
+      <a href="about.html" class="nav-link">About</a>
+      <a href="gallery.html" class="nav-link">Gallery</a>
+      <a href="contact.html" class="nav-link active">Contact</a>
+    </nav>
+    <div class="flex items-center gap-4">
+      <a href="https://instagram.com/srinidhii.sreeram" aria-label="Instagram" target="_blank" rel="noopener" class="text-[var(--copper)]">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22" fill="currentColor">
+          <path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm0 2h10c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 3-3zm11 2a1 1 0 100 2 1 1 0 000-2zM12 7a5 5 0 100 10 5 5 0 000-10zm0 2a3 3 0 110 6 3 3 0 010-6z"/>
+        </svg>
+      </a>
+    </div>
+  </div>
+</header>
+
+<!-- Split section -->
+<section class="grid md:grid-cols-2 min-h-[80vh]">
+  <!-- Left: full-height image -->
+  <div class="relative">
+    <img src="contact-image.png" alt="Srinidhii performing" class="w-full h-full object-cover">
+  </div>
+  <!-- Right: form card -->
+  <div class="flex items-center justify-center p-6 md:p-10">
+    <div class="card w-full max-w-xl p-8">
+      <h1 class="text-4xl font-extrabold mb-4">Contact me</h1>
+      <div class="h-1 w-16 bg-[var(--copper)] mb-6"></div>
+      <p class="mb-4"><strong>Email:</strong> srinidhiisreeram@gmail.com</p>
+
+      <form id="enquiry-form" class="grid grid-cols-1 md:grid-cols-2 gap-4" novalidate>
+        <input name="name" placeholder="Name" required class="border rounded p-3">
+        <input type="email" name="email" placeholder="Email" required class="border rounded p-3">
+        <input name="phone" placeholder="Phone Number including country code" class="border rounded p-3 md:col-span-2">
+        <textarea name="message" rows="6" placeholder="Message" required class="border rounded p-3 md:col-span-2"></textarea>
+
+        <input type="text" name="_gotcha" class="hidden" tabindex="-1" autocomplete="off">
+        <input type="hidden" name="_subject" value="New enquiry from website">
+        <button class="btn md:w-max" id="submit-btn">Submit</button>
+        <p id="form-status" class="md:col-span-2 text-sm mt-2"></p>
+      </form>
+
+      <div class="mt-6 flex items-center gap-3 text-sm text-gray-600">
+        <span>Follow:</span>
+        <a href="https://instagram.com/srinidhii.sreeram" target="_blank" rel="noopener" class="inline-flex items-center gap-2 text-[var(--copper)] hover:underline">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="18" height="18" fill="currentColor">
+            <path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm0 2h10c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 3-3zm11 2a1 1 0 100 2 1 1 0 000-2zM12 7a5 5 0 100 10 5 5 0 000-10zm0 2a3 3 0 110 6 3 3 0 010-6z"/>
+          </svg>
+          @srinidhii.sreeram
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
+
+<script>
+  // Formspree wiring (paste your endpoint below when ready)
+  const ENDPOINT = ''; // e.g., 'https://formspree.io/f/xxxxxxx'
+  const form = document.getElementById('enquiry-form');
+  const status = document.getElementById('form-status');
+  const btn = document.getElementById('submit-btn');
+  form.addEventListener('submit', async (e) => {
+    e.preventDefault();
+    if(!ENDPOINT) { status.textContent = 'Form endpoint not connected yet. Please email srinidhiisreeram@gmail.com.'; return; }
+    status.textContent = 'Sending...';
+    btn.disabled = true;
+    try {
+      const data = new FormData(form);
+      const res = await fetch(ENDPOINT, { method:'POST', body:data, headers:{'Accept':'application/json'} });
+      if(res.ok) { form.reset(); status.textContent = 'Thanks! Your message has been sent.'; }
+      else status.textContent = 'Something went wrong. Please email us.';
+    } catch(err) { status.textContent = 'Network error. Please try again or email us.'; }
+    finally { btn.disabled = false; }
+  });
+</script>
+
+<footer class="mt-0 border-t">
+  <div class="max-w-6xl mx-auto px-6 py-8 text-sm text-gray-600">© Srinidhii Sreeram</div>
+</footer>
+</body>
+</html>
