--- a/contact.html
+++ b/contact.html
@@ -19,31 +19,19 @@
 </head>
 <body class="antialiased">
 <header class="sticky top-0 z-30 bg-[var(--bg)]/95 backdrop-blur border-b">
-  <div class="max-w-6xl mx-auto px-6 py-4 flex items-center justify-between gap-10">
-    <nav class="flex items-center gap-10">
-      <a href="/" class="nav-link">Home</a>
-      <a href="about.html" class="nav-link">About</a>
-      <a href="gallery.html" class="nav-link">Gallery</a>
-      <a href="contact.html" class="nav-link active">Contact</a>
-    </nav>
-    <div class="flex items-center gap-4">
-      <a href="https://instagram.com/srinidhii.sreeram" aria-label="Instagram" target="_blank" rel="noopener" class="text-[var(--copper)]">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22" fill="currentColor">
-          <path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm0 2h10c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 3-3zm11 2a1 1 0 100 2 1 1 0 000-2zM12 7a5 5 0 100 10 5 5 0 000-10zm0 2a3 3 0 110 6 3 3 0 010-6z"/>
-        </svg>
-      </a>
-    </div>
+  <div class="max-w-6xl mx-auto px-6 py-4 flex items-center gap-10">
+    <a href="/" class="nav-link">Home</a>
+    <a href="about.html" class="nav-link">About</a>
+    <a href="gallery.html" class="nav-link">Gallery</a>
+    <a href="contact.html" class="nav-link active">Contact</a>
   </div>
 </header>
 
-<!-- Split section -->
-<section class="grid md:grid-cols-2 min-h-[80vh]">
-  <!-- Left: full-height image -->
-  <div class="relative">
-    <img src="contact-image.png" alt="Srinidhii performing" class="w-full h-full object-cover">
+<section class="min-h-[90vh] grid md:grid-cols-2">
+  <div class="relative md:min-h-[90vh]">
+    <img src="contact-image.png" alt="Srinidhii performing" class="absolute inset-0 w-full h-full object-cover" />
   </div>
-  <!-- Right: form card -->
-  <div class="flex items-center justify-center p-6 md:p-10">
+  <div class="flex items-center justify-center p-6 md:p-10 bg-[var(--bg)]">
     <div class="card w-full max-w-xl p-8">
       <h1 class="text-4xl font-extrabold mb-4">Contact me</h1>
       <div class="h-1 w-16 bg-[var(--copper)] mb-6"></div>
@@ -54,29 +42,17 @@
         <input type="email" name="email" placeholder="Email" required class="border rounded p-3">
         <input name="phone" placeholder="Phone Number including country code" class="border rounded p-3 md:col-span-2">
         <textarea name="message" rows="6" placeholder="Message" required class="border rounded p-3 md:col-span-2"></textarea>
-
         <input type="text" name="_gotcha" class="hidden" tabindex="-1" autocomplete="off">
         <input type="hidden" name="_subject" value="New enquiry from website">
         <button class="btn md:w-max" id="submit-btn">Submit</button>
         <p id="form-status" class="md:col-span-2 text-sm mt-2"></p>
       </form>
-
-      <div class="mt-6 flex items-center gap-3 text-sm text-gray-600">
-        <span>Follow:</span>
-        <a href="https://instagram.com/srinidhii.sreeram" target="_blank" rel="noopener" class="inline-flex items-center gap-2 text-[var(--copper)] hover:underline">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="18" height="18" fill="currentColor">
-            <path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm0 2h10c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 3-3zm11 2a1 1 0 100 2 1 1 0 000-2zM12 7a5 5 0 100 10 5 5 0 000-10zm0 2a3 3 0 110 6 3 3 0 010-6z"/>
-          </svg>
-          @srinidhii.sreeram
-        </a>
-      </div>
     </div>
   </div>
 </section>
 
 <script>
-  // Formspree wiring (paste your endpoint below when ready)
-  const ENDPOINT = ''; // e.g., 'https://formspree.io/f/xxxxxxx'
+  const ENDPOINT = ''; // e.g. 'https://formspree.io/f/xxxxxxx'
   const form = document.getElementById('enquiry-form');
   const status = document.getElementById('form-status');
   const btn = document.getElementById('submit-btn');
@@ -95,8 +71,44 @@
   });
 </script>
 
-<footer class="mt-0 border-t">
-  <div class="max-w-6xl mx-auto px-6 py-8 text-sm text-gray-600">© Srinidhii Sreeram</div>
+
+<footer class="mt-16 bg-[#111] text-[#ddd]">
+  <div class="max-w-6xl mx-auto px-6 py-12 grid gap-10 md:grid-cols-3">
+    <div>
+      <h3 class="text-white font-semibold mb-4">Explore</h3>
+      <ul class="space-y-2 text-sm">
+        <li><a class="hover:underline" href="/about.html">About</a></li>
+        <li><a class="hover:underline" href="/gallery.html">Gallery</a></li>
+        <li><a class="hover:underline" href="/contact.html">Contact</a></li>
+      </ul>
+    </div>
+    <div>
+      <h3 class="text-white font-semibold mb-4">Quick Links</h3>
+      <ul class="space-y-2 text-sm">
+        <li><a class="hover:underline" href="/sitemap.xml">Sitemap</a></li>
+        <li><a class="hover:underline" href="/robots.txt">Robots</a></li>
+        <li><a class="hover:underline" href="mailto:srinidhiisreeram@gmail.com">Email</a></li>
+      </ul>
+    </div>
+    <div>
+      <h3 class="text-white font-semibold mb-4">Contact</h3>
+      <p class="text-sm">London, United Kingdom</p>
+      <p class="text-sm mt-1"><a class="hover:underline" href="mailto:srinidhiisreeram@gmail.com">srinidhiisreeram@gmail.com</a></p>
+      <div class="mt-4 flex items-center gap-4">
+        <a href="https://instagram.com/srinidhii.sreeram" target="_blank" rel="noopener" aria-label="Instagram" class="text-[#ddd] hover:text-white">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22" fill="currentColor">
+            <path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm0 2h10c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 3-3zm11 2a1 1 0 100 2 1 1 0 000-2zM12 7a5 5 0 100 10 5 5 0 000-10zm0 2a3 3 0 110 6 3 3 0 010-6z"/>
+          </svg>
+        </a>
+      </div>
+    </div>
+  </div>
+  <div class="border-t border-white/10">
+    <div class="max-w-6xl mx-auto px-6 py-6 text-xs text-[#aaa]">
+      © Srinidhii Sreeram
+    </div>
+  </div>
 </footer>
+
 </body>
 </html>
