--- a/contact.html
+++ b/contact.html
@@ -28,16 +28,16 @@
 </header>
 
 
-<section class="min-h-[80vh] grid md:grid-cols-2">
-  <div class="flex items-center justify-center p-6 md:p-10">
-    <img src="contact-image.png" alt="Srinidhii performing" class="max-h-[70vh] w-auto object-contain rounded-xl shadow-md" />
+
+<section class="max-w-6xl mx-auto px-6 py-10 grid md:grid-cols-2 gap-8">
+  <div class="flex justify-center md:justify-start">
+    <img src="contact-image.png" alt="Srinidhii performing" class="w-full max-w-[520px] max-h-[680px] object-contain rounded-xl shadow-md" />
   </div>
-  <div class="flex items-center justify-center p-6 md:p-10 bg-[var(--bg)]">
-    <div class="card w-full max-w-xl p-8">
+  <div class="flex justify-center md:justify-start">
+    <div class="card w-full max-w-xl p-8 self-start">
       <h1 class="text-4xl font-extrabold mb-4">Contact me</h1>
       <div class="h-1 w-16 bg-[var(--copper)] mb-6"></div>
       <p class="mb-4"><strong>Email:</strong> srinidhiisreeram@gmail.com</p>
-
       <form id="enquiry-form" class="grid grid-cols-1 md:grid-cols-2 gap-4" novalidate>
         <input name="name" placeholder="Name" required class="border rounded p-3">
         <input type="email" name="email" placeholder="Email" required class="border rounded p-3">
@@ -51,6 +51,7 @@
     </div>
   </div>
 </section>
+
 
 
 <script>
@@ -75,23 +76,24 @@
 
 
 
-<footer class="mt-16 bg-[#111] text-[#ddd]">
-  <div class="max-w-6xl mx-auto px-6 py-12 grid gap-10 md:grid-cols-2">
+
+<footer class="mt-10 bg-[#111] text-[#ddd]">
+  <div class="max-w-6xl mx-auto px-6 py-8 grid gap-6 md:grid-cols-2 items-start">
     <div>
-      <h3 class="text-white font-semibold mb-4">Explore</h3>
-      <ul class="space-y-2 text-sm">
+      <h3 class="text-white font-semibold mb-3">Explore</h3>
+      <ul class="space-y-1.5 text-sm">
         <li><a class="hover:underline" href="/about.html">About</a></li>
         <li><a class="hover:underline" href="/gallery.html">Gallery</a></li>
         <li><a class="hover:underline" href="/contact.html">Contact</a></li>
       </ul>
     </div>
     <div>
-      <h3 class="text-white font-semibold mb-4">Contact</h3>
+      <h3 class="text-white font-semibold mb-3">Contact</h3>
       <p class="text-sm">London, United Kingdom</p>
       <p class="text-sm mt-1"><a class="hover:underline" href="mailto:srinidhiisreeram@gmail.com">srinidhiisreeram@gmail.com</a></p>
-      <div class="mt-4 flex items-center gap-4">
+      <div class="mt-3 flex items-center gap-3">
         <a href="https://instagram.com/srinidhii.sreeram" target="_blank" rel="noopener" aria-label="Instagram" class="text-[#ddd] hover:text-white">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22" fill="currentColor">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
             <path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm0 2h10c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 3-3zm11 2a1 1 0 100 2 1 1 0 000-2zM12 7a5 5 0 100 10 5 5 0 000-10zm0 2a3 3 0 110 6 3 3 0 010-6z"/>
           </svg>
         </a>
@@ -99,11 +101,10 @@
     </div>
   </div>
   <div class="border-t border-white/10">
-    <div class="max-w-6xl mx-auto px-6 py-6 text-xs text-[#aaa]">
-      © Srinidhii Sreeram
-    </div>
+    <div class="max-w-6xl mx-auto px-6 py-4 text-xs text-[#aaa]">© Srinidhii Sreeram</div>
   </div>
 </footer>
+
 
 
 </body>
