--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!doctype html><html lang='en'><head><meta charset='utf-8'><meta name='viewport' content='width=device-width, initial-scale=1'><title>Srinidhii Sreeram</title><meta name='description' content='Bharatanatyam artist and teacher based in London. Performances, classes, and workshops.'><script src='https://cdn.tailwindcss.com'></script><style>:root{--bg:#F6ECE5;--copper:#C4682D;--copper-d:#9F4F1E;--text:#2B2B2B;}body{background:var(--bg);color:var(--text);}.nav-link{color:var(--copper);font-weight:600;}.nav-link.active{text-decoration:underline;text-underline-offset:6px;}.btn{background:var(--copper);color:#fff;padding:.6rem 1.2rem;border-radius:.6rem;}.btn:hover{background:var(--copper-d);}.card{background:#fff;border-radius:1rem;box-shadow:0 10px 20px rgba(0,0,0,.05);}</style></head><body class='antialiased'><header class='sticky top-0 z-30 bg-[var(--bg)]/95 backdrop-blur border-b'><div class='max-w-6xl mx-auto px-6 py-4 flex items-center gap-10'><a href='index.html' class='nav-link active'>Home</a><a href='about.html' class='nav-link '>About</a><a href='gallery.html' class='nav-link '>Gallery</a><a href='contact.html' class='nav-link '>Contact</a></div></header><section class='grid grid-cols-1 md:grid-cols-3 gap-6 px-6 pt-6'><img src='home1.png' class='w-full h-[70vh] object-cover' alt='Photo'><img src='home2.png' class='w-full h-[70vh] object-cover' alt='Photo'><img src='home3.png' class='w-full h-[70vh] object-cover' alt='Photo'></section><section class='max-w-4xl mx-auto px-6 py-12'><h2 class='text-3xl font-serif mb-4'>About</h2><p class='leading-8'>Srinidhii Sreeram is a Bharatanatyam dancer whose artistry is marked by a strong command of rhythm, a nuanced approach to abhinaya, and an energetic stage presence. A senior disciple of Smt. Padmini Krishnamurthy, she began her training at the age of six and has since performed widely across India, the Middle East, the United Kingdom, and the United States. <br><br><br><br>Beyond performance, Srinidhii is an engaging teacher who brings patience, joy, and creativity into her classes. Her teaching blends discipline with joy, encouraging students to discover their strengths while nurturing a deep respect for the art form.<br><br><br><br>Now based in London, Srinidhii continues to expand her practice as both performer and educator, seeking to share Bharatanatyam as a living dialogue between tradition and today’s world — an art form that resonates across cultures and generations.</p></section>
-<footer class="mt-16 bg-[#111] text-[#ddd]">
-  <div class="max-w-6xl mx-auto px-6 py-12 grid gap-10 md:grid-cols-2">
+
+<footer class="mt-10 bg-[#111] text-[#ddd]">
+  <div class="max-w-6xl mx-auto px-6 py-8 grid gap-6 md:grid-cols-2 items-start">
     <div>
-      <h3 class="text-white font-semibold mb-4">Explore</h3>
-      <ul class="space-y-2 text-sm">
+      <h3 class="text-white font-semibold mb-3">Explore</h3>
+      <ul class="space-y-1.5 text-sm">
         <li><a class="hover:underline" href="/about.html">About</a></li>
         <li><a class="hover:underline" href="/gallery.html">Gallery</a></li>
         <li><a class="hover:underline" href="/contact.html">Contact</a></li>
       </ul>
     </div>
     <div>
-      <h3 class="text-white font-semibold mb-4">Contact</h3>
+      <h3 class="text-white font-semibold mb-3">Contact</h3>
       <p class="text-sm">London, United Kingdom</p>
       <p class="text-sm mt-1"><a class="hover:underline" href="mailto:srinidhiisreeram@gmail.com">srinidhiisreeram@gmail.com</a></p>
-      <div class="mt-4 flex items-center gap-4">
+      <div class="mt-3 flex items-center gap-3">
         <a href="https://instagram.com/srinidhii.sreeram" target="_blank" rel="noopener" aria-label="Instagram" class="text-[#ddd] hover:text-white">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22" fill="currentColor">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
             <path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm0 2h10c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 3-3zm11 2a1 1 0 100 2 1 1 0 000-2zM12 7a5 5 0 100 10 5 5 0 000-10zm0 2a3 3 0 110 6 3 3 0 010-6z"/>
           </svg>
         </a>
@@ -23,9 +24,8 @@
     </div>
   </div>
   <div class="border-t border-white/10">
-    <div class="max-w-6xl mx-auto px-6 py-6 text-xs text-[#aaa]">
-      © Srinidhii Sreeram
-    </div>
+    <div class="max-w-6xl mx-auto px-6 py-4 text-xs text-[#aaa]">© Srinidhii Sreeram</div>
   </div>
 </footer>
+
 </body></html>
