--- a/contact.html
+++ b/contact.html
@@ -31,14 +31,14 @@
 
 <section class="max-w-6xl mx-auto px-6 py-10 grid md:grid-cols-2 gap-8">
   <div class="flex justify-center md:justify-start">
-    <img src="contact-image.png" alt="Srinidhii performing" class="w-full max-w-[520px] max-h-[680px] object-contain rounded-xl shadow-md" />
+    <img src="contact-image.png" alt="Srinidhii performing" class="w-full max-w-[520px] max-h-[680px] object-contain" />
   </div>
   <div class="flex justify-center md:justify-start">
     <div class="card w-full max-w-xl p-8 self-start">
       <h1 class="text-4xl font-extrabold mb-4">Contact me</h1>
       <div class="h-1 w-16 bg-[var(--copper)] mb-6"></div>
-      <p class="mb-4"><strong>Email:</strong> srinidhiisreeram@gmail.com</p>
-      <form id="enquiry-form" class="grid grid-cols-1 md:grid-cols-2 gap-4" novalidate>
+      
+      <p class="mb-2 text-[15px]">Please fill out the form below for any queries related to events, production or training.</p><p class="mb-1"><strong>Phone:</strong> <a href="tel:+447767976340">+44 7767 976 340</a></p><p class="mb-4"><strong>Email:</strong> <a href="mailto:srinidhiisreeram@gmail.com">srinidhiisreeram@gmail.com</a></p><form id="enquiry-form" class="grid grid-cols-1 md:grid-cols-2 gap-4" novalidate>
         <input name="name" placeholder="Name" required class="border rounded p-3">
         <input type="email" name="email" placeholder="Email" required class="border rounded p-3">
         <input name="phone" placeholder="Phone Number including country code" class="border rounded p-3 md:col-span-2">
@@ -55,7 +55,7 @@
 
 
 <script>
-  const ENDPOINT = ''; // e.g. 'https://formspree.io/f/xxxxxxx'
+  const ENDPOINT = 'https://formspree.io/f/xanpdnvq'; // e.g. 'https://formspree.io/f/xxxxxxx'
   const form = document.getElementById('enquiry-form');
   const status = document.getElementById('form-status');
   const btn = document.getElementById('submit-btn');
