--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1"><script src="https://cdn.tailwindcss.com"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Gallery — Srinidhii Sreeram</title>
+  <meta name="description" content="Curated performances and moments from Srinidhii Sreeram's Bharatanatyam journey.">
+  <script src="https://cdn.tailwindcss.com"></script>
   <link rel="canonical" href="https://srinidhii-site.vercel.app/gallery.html">
   <style>
     :root { --bg:#F6ECE5; --copper:#C4682D; --text:#2B2B2B; }
@@ -10,74 +13,14 @@
     .nav-link { color: var(--copper); font-weight:600; }
     .nav-link.active { text-decoration: underline; text-underline-offset:6px; }
   </style>
-
-  <title>Gallery — Srinidhii Sreeram | Bharatanatyam</title>
-  <link rel="canonical" href="https://srinidhii-site.vercel.app/gallery.html">
-
-  <meta name="description" content="Gallery of Bharatanatyam performances by Srinidhii Sreeram — stage moments, abhinaya, and nrtta highlights.">
-  <meta name="keywords" content="Bharatanatyam, Indian classical dance, Srinidhii Sreeram, London, dancer, abhinaya, nrtta, classes, performances">
-  <meta name="author" content="Srinidhii Sreeram">
-
-  <!-- Open Graph -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Gallery — Srinidhii Sreeram | Bharatanatyam">
-  <meta property="og:description" content="Gallery of Bharatanatyam performances by Srinidhii Sreeram — stage moments, abhinaya, and nrtta highlights.">
-  <meta property="og:url" content="https://srinidhii-site.vercel.app/gallery.html">
-  <meta property="og:image" content="https://srinidhii-site.vercel.app/home1.png">
-
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Gallery — Srinidhii Sreeram | Bharatanatyam">
-  <meta name="twitter:description" content="Gallery of Bharatanatyam performances by Srinidhii Sreeram — stage moments, abhinaya, and nrtta highlights.">
-  <meta name="twitter:image" content="https://srinidhii-site.vercel.app/home1.png">
-
-  <script type="application/ld+json">
-  {
-  "@context": "https://schema.org",
-  "@type": "Person",
-  "name": "Srinidhii Sreeram",
-  "jobTitle": "Bharatanatyam Dancer",
-  "address": {
-    "@type": "PostalAddress",
-    "addressLocality": "London",
-    "addressCountry": "UK"
-  },
-  "url": "https://srinidhii-site.vercel.app",
-  "image": "https://srinidhii-site.vercel.app/home1.png",
-  "sameAs": [
-    "https://instagram.com/srinidhii.sreeram"
-  ],
-  "knowsAbout": [
-    "Bharatanatyam",
-    "Indian classical dance",
-    "Abhinaya",
-    "Nrtta",
-    "Performance"
-  ]
-}
-  </script>
-  <script type="application/ld+json">
-  {
-  "@context": "https://schema.org",
-  "@type": "WebSite",
-  "url": "https://srinidhii-site.vercel.app",
-  "name": "Srinidhii Sreeram",
-  "potentialAction": {
-    "@type": "SearchAction",
-    "target": "https://srinidhii-site.vercel.app/?q={search_term_string}",
-    "query-input": "required name=search_term_string"
-  }
-}
-  </script>
-
 </head>
 <body class="antialiased">
 <header class="sticky top-0 z-30 bg-[var(--bg)]/95 backdrop-blur border-b">
   <div class="max-w-6xl mx-auto px-6 py-4 flex items-center gap-10">
     <a href="/" class="nav-link">Home</a>
-    <a href="about.html" class="nav-link">About me</a>
+    <a href="about.html" class="nav-link">About</a>
     <a href="gallery.html" class="nav-link active">Gallery</a>
-    <a href="contact.html" class="nav-link">Contact us</a>
+    <a href="contact.html" class="nav-link">Contact</a>
   </div>
 </header>
 
@@ -182,9 +125,9 @@
     <div>
       <h3 class="text-white font-semibold mb-3">Explore</h3>
       <ul class="space-y-1.5 text-sm">
-        <li><a class="hover:underline" href="/about.html">About me</a></li>
+        <li><a class="hover:underline" href="/about.html">About</a></li>
         <li><a class="hover:underline" href="/gallery.html">Gallery</a></li>
-        <li><a class="hover:underline" href="/contact.html">Contact us</a></li>
+        <li><a class="hover:underline" href="/contact.html">Contact</a></li>
       </ul>
     </div>
     <div>
